Adjusted timer colors and added styles to prevent width overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
 }
 
 :root {
+    max-width: 100vw;
+    overflow-x: hidden;
+
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
