--- a/src/styles/CountdownTimer.less
+++ b/src/styles/CountdownTimer.less
@@ -16,8 +16,8 @@
         h2 {
             font-family: 'Alagard', sans-serif;
             font-size: 32px;
-            color: gold;
             font-weight: 700;
+            color: #cfcfcf;
         }
 
         .countdown {
@@ -27,7 +27,6 @@
             font-size: 128px;
             min-width: 475px;
             min-height: 195px;
-            color: gold;
 
             .countdown-segment {
                 display: flex;
@@ -39,6 +38,7 @@
                     font-size: 16px;
                     position: absolute;
                     bottom: 0;
+                    color: #cfcfcf;
                 }
 
                 .countdown-value {
@@ -55,6 +55,10 @@
                         margin-right: -16px;
                         min-width: 190px;
                         text-align: center;
+                        background: linear-gradient(45deg, #a67c00, #bf9b30, #ffdc73, #bf9b30, #a67c00);
+                        -webkit-background-clip: text;
+                        background-clip: text;
+                        color: transparent;
                     }
                 }
             }
