--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -42,6 +42,7 @@
             margin: 0;
             font-size: 3rem;
             font-family: 'Alagard', sans-serif;
+            color: #cfcfcf;
         }
     }
 
